--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
         <div class="logo">
             <nav class="navbar fixed-top">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Gemma creaciones</a>
+                  <a class="navbar-brand text-white" href="index.html">Gemma creaciones</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="offcanvas offcanvas-end text-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                     <div class="offcanvas-header">
-                      <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Gemma creaciones</h5>
+                      <h5 class="offcanvas-title text-white" id="offcanvasDarkNavbarLabel">Gemma creaciones</h5>
                       <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                       <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                          <a class="nav-link active text-white aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="about.html">About us</a>
+                          <a class="nav-link text-white" href="about.html">About us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link text-white" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="products.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle text-white" href="products.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Products
                             </a>
                             <ul class="dropdown-menu">
