--- a/contact.html
+++ b/contact.html
@@ -60,54 +60,50 @@
 
     </header>
     <main class="main">
+        <div class="intro">
+            <h3>¡Hola! ¿Necesitás ayuda o tenés alguna pregunta?</h3>
+            <h5>Estamos acá para asistirte. Si deseas contactarnos, por favor deja los siguientes datos en nuestro
+                formulario y nos estaremos comunicando a la brevedad.</h5>
+            <h5>Estamos ansiosos por saber de vos y ayudarte en lo que necesites.</h5>
+        </div>
         <div class="formulario">
-            <form>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="inputEmail4">Email</label>
-                        <input type="email" class="form-control" id="inputEmail4">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="inputPassword4">Password</label>
-                        <input type="password" class="form-control" id="inputPassword4">
-                    </div>
+            <h5><strong>Formulario de contacto</strong></h5><br>
+            <div class="row">
+                <div class="col">
+                    <label for="nombre">Nombre</label><br>
+                    <input type="text" class="form-control" id="nombre" placeholder="Sofía" aria-label="First name">
                 </div>
-                <div class="form-group">
-                    <label for="inputAddress">Address</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                <div class="col">
+                    <label for="apellido">Apellido</label><br>
+                    <input type="text" class="form-control" id="apellido" placeholder="Fernandez"
+                        aria-label="Last name">
                 </div>
-                <div class="form-group">
-                    <label for="inputAddress2">Address 2</label>
-                    <input type="text" class="form-control" id="inputAddress2"
-                        placeholder="Apartment, studio, or floor">
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="inputCity">City</label>
-                        <input type="text" class="form-control" id="inputCity">
-                    </div>
-                    <div class="form-group col-md-4">
-                        <label for="inputState">State</label>
-                        <select id="inputState" class="form-control">
-                            <option selected>Choose...</option>
-                            <option>...</option>
-                        </select>
-                    </div>
-                    <div class="form-group col-md-2">
-                        <label for="inputZip">Zip</label>
-                        <input type="text" class="form-control" id="inputZip">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                            Check me out
-                        </label>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Sign in</button>
+            </div>
+
+            <div class="mb-3">
+                <br><label for="exampleFormControlInput1" class="form-label">Correo electrónico</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="sofiafer@gmail.com">
+            </div>
+
+            <div class="col">
+                <label for="telefono">Telefono</label><br>
+                <input type="tel" class="form-control" id="telefono" placeholder="3704987654" aria-label="telefono"><br><br>
+            </div>
+
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Dinos qué te gustaría saber</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Acepto recibir notificaciones sobre nuevos productos
+                    y ofertas.</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
+
+
         </div>
 
     </main>
@@ -237,7 +233,6 @@
             </div>
         </div>
 
-    </footer>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
