--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/contact.css">
@@ -61,8 +61,8 @@
     </header>
     <main class="main">
         <div class="intro">
-            <h3>¡Hola! ¿Necesitás ayuda o tenés alguna pregunta?</h3>
-            <h5>Estamos acá para asistirte. Si deseas contactarnos, por favor deja los siguientes datos en nuestro
+            <h3>¡Hola! ¿Necesita ayuda o tiene alguna pregunta?</h3>
+            <h5>Estamos acá para asistirle. Si deseas contactarnos, por favor deje los siguientes datos en nuestro
                 formulario y nos estaremos comunicando a la brevedad.</h5>
             <h5>Estamos ansiosos por saber de vos y ayudarte en lo que necesites.</h5>
         </div>
@@ -108,8 +108,19 @@
                 <button type="submit" class="btn btn-primary btn-custom">Enviar</button>
             </form>
 
+        </div>
+        <div class="fin">
+            <br>
+            <h3>Otras formas de contacto</h3>
+            <h5>También puede contactarnos directamente a través del siguiente
+                correo electrónico <a href="mailto:demo@yourdomain.com">gemmacreaciones@gmail.com</a> o al número de
+                telefóno +54 9 3704797920</h5>
+            <h5>Además, siéntase libre de seguirnos y contactarnos a través de nuestras redes sociales para estar al
+                tanto de las últimas novedades y actualizaciones.</h5>
 
         </div>
+
+
 
     </main>
 
