Se agregó el texto y 2 img al about

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>Sobre nosotros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/styles/contact.css">
+    <link rel="stylesheet" href="./assets/styles/about.css">
 </head>
 
 <body>
@@ -60,6 +60,38 @@
 
     </header>
     <main>
+
+
+        <div class="conteiner">
+            <div class="bienvenido">
+                <h2>¡Hola, Somos Gemma Creaciones!</h2>
+                <h5>En Gema creaciones, somos un equipo de amantes de la tela y la creatividad. Nos encanta diseñar y crear productos únicos que hacen la vida un poco más colorida y divertida.</h5>
+            </div>
+            <div class="img">
+                <img src="./assets/img/img1about.avif" alt="">
+            </div>
+            <div class="text1">
+                <h4>¿Quiénes somos?</h4>
+                <h5>Somos un grupo de personas apasionadas por la artesanía y la calidad.</h5>
+                <h5>Desde nuestras cartucheras hasta nuestros neceseres y portanotebook, cada artículo está hecho con amor y atención al detalle.</h5>
+            </div>
+            <div class="text2">
+                <h4>¿Qué nos impulsa?</h4>
+                <h5>Nos inspira la idea de ofrecerte productos que te hagan sonreir cada vez que los uses. Nos encanta experimentar con diferentes telas y estilos para traerte algo especial y único.</h5>
+            </div>
+            <div class="text3">
+                <h4>Nuestro Compromiso</h4>
+                <h5>Nos comprometemos a utilizar materiales de alta calidad y prácticas de fabricación responsables. Queremos que te sientas bien sabiendo que estás apoyando productos hechos con amor y cuidado.</h5>
+            </div>
+            <div class="img2">
+                <img src="./assets/img/img2about.webp" alt="">
+            </div>
+            <div class="text4">
+                <h4>¡Gracias por ser parte de nuestra historia!</h4>
+                <h5>Desde el fondo de nuestros corazones, queremos agradecerte por ser parte de la familia Gemma Creaciones. Tu apoyo significa el mundo para nosotros y nos impulsa a seguir creando productos increibles para ti.</h5>
+            </div>
+
+        </div>
 
     </main>
 
