--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav class="navbar fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand text-white" href="index.html">Gemma creaciones</a>
+          <a class="navbar-brand text-white" href="index.html"><img src="assets/img/imglogoletras.png" alt="" height="30px" width="150px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -23,7 +23,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active text-white aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" href="about.html">About us</a>
@@ -32,27 +32,73 @@
                     <a class="nav-link text-white" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-white" href="products.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Products
-                    </a>
-                    <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Cartucheras</a></li>
-                    <li><a class="dropdown-item" href="#">Neceser</a></li>
-                    <li><a class="dropdown-item" href="#">Porta Notebooks</a></li>
+                  <a class="nav-link dropdown-toggle text-white" href="products.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Products</a>
+                  <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Cartucheras</a></li>
+                  <li><a class="dropdown-item" href="#">Neceser</a></li>
+                  <li><a class="dropdown-item" href="#">Porta Notebooks</a></li>
                 </li>
             </ul>
               <form class="d-flex mt-3" role="search">
                 <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                <button class="navbar-button" type="submit" place>Buscar</button>
+                <button class="navbar-button" type="submit" placeholder="Buscar">Buscar</button>
               </form>
             </div>
           </div>
         </div>
       </nav>
     </header>
-    <main></main>
-    <aside></aside>
-
+    <main class="mb-4">
+      <div id="carouselExample" class="carousel slide" >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/img/imgcarrusel.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/imgcarrusel2.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/imgcarrusel3.png"class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <div class="text-container">
+        <h3 class="linea"><span>Destacados</span></h3>
+      </div>
+      <div class="card-group d-flex flex-row mb-3 justify-content-around">
+      <div class="card-inicio card-item p-2" style="width: 18rem;">
+          <img src="assets/img/imghome1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+          <h5 class="card-title">Neceser con detalles azules</h5>
+          <p class="card-text">$precio</p>
+          <a href="#" class="btn card-button text-white">Comprar</a>
+          </div>
+      </div>
+      <div class="card-inicio card-item p-2" style="width: 18rem;">
+        <img src="assets/img/imghome2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+        <h5 class="card-title">Mochila matera</h5>
+        <p class="card-text">$precio</p>
+        <a href="#" class="btn card-button text-white">Comprar</a>
+        </div>
+    </div>
+    <div class="card-inicio card-item p-2" style="width: 18rem;">
+      <img src="assets/img/imghome3.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+      <h5 class="card-title">Bolso rosado</h5>
+      <p class="card-text">$precio</p>
+      <a href="#" class="btn card-button text-white">Comprar</a>
+    </div>
+    </div>
+    </main>
 <footer class="footer">
     <section class=" py-4 py-md-5 py-xl-8 border-top border-light">
       <div class="container overflow-hidden">
@@ -162,10 +208,7 @@
         </div>
       </div>
     </div>
-  
-  </footer>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
