--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav class="navbar fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand text-white" href="index.html">Gemma creaciones</a>
+          <a class="navbar-brand text-white" href="index.html"><img src="assets/img/imglogoletras.png" alt="" height="30px" width="150px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -23,7 +23,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active text-white aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" href="about.html">About us</a>
@@ -43,7 +43,7 @@
             </ul>
               <form class="d-flex mt-3" role="search">
                 <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                <button class="navbar-button" type="submit" place>Buscar</button>
+                <button class="navbar-button" type="submit" placeholder="Buscar">Buscar</button>
               </form>
             </div>
           </div>
@@ -51,7 +51,6 @@
       </nav>
     </header>
     <main></main>
-    <aside></aside>
 
 <footer class="footer">
     <section class=" py-4 py-md-5 py-xl-8 border-top border-light">
@@ -60,7 +59,7 @@
           <div class="col-12 col-md-4 col-lg-3 col-xl-2">
             <div class="widget">
               <a href="#!">
-                <img class="footer-logo" src="assets/img/logo.jpeg" alt="BootstrapBrain Logo" width="175" height="57">
+                <img class="footer-logo" src="assets/img/logo.jpeg" width="175" height="57">
               </a>
             </div>
           </div>
@@ -73,7 +72,7 @@
                 <a class="link-secondary text-decoration-none text-white" href="tel:+15057922430">+54 9 3704797920</a>
               </p>
               <p class="mb-0">
-                <a class="link-secondary text-decoration-none text-white" href="mailto:demo@yourdomain.com">gemmacreaciones@gmail.com</a>
+                <a class="link-secondary text-decoration-none text-white">gemmacreaciones@gmail.com</a>
               </p>
             </div>
           </div>
@@ -144,15 +143,15 @@
           <div class="col-xs-12 col-md-5 order-0 order-md-1">
             <ul class="nav justify-content-center justify-content-md-end">
               <li class="nav-item">
-                <a class="nav-link link-dark" href="https://www.facebook.com/story.php?story_fbid=5998023036925959&id=100001549666486&mibextid=WC7FNe&rdid=KdI0aPWW8zSCHZ7p">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                <a class="nav-link link-white" href="https://www.facebook.com/story.php?story_fbid=5998023036925959&id=100001549666486&mibextid=WC7FNe&rdid=KdI0aPWW8zSCHZ7p">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-facebook" viewBox="0 0 16 16">
                     <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
                   </svg>
-                </a>
+                </a>                
               </li>
               <li class="nav-item">
-                <a class="nav-link link-dark" href="https://www.instagram.com/gemma.creaciones/">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                <a class="nav-link link-white" href="https://www.instagram.com/gemma.creaciones/">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-instagram" viewBox="0 0 16 16">
                     <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
                   </svg>
                 </a>
@@ -164,7 +163,7 @@
     </div>
   
   </footer>
-    </footer>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
