--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active text-white aria-current=" page" href="index.html">Home</a>
+                                <a class="nav-link active text-white" aria-current=" page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="about.html">About us</a>
@@ -44,14 +44,15 @@
                                     Products
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Cartucheras</a></li>
-                                    <li><a class="dropdown-item" href="#">Neceser</a></li>
-                                    <li><a class="dropdown-item" href="#">Porta Notebooks</a></li>
+                                    <li><a class="dropdown-item" href="cartucheras.html">Cartucheras</a></li>
+                                    <li><a class="dropdown-item" href="neceser.html">Neceser</a></li>
+                                    <li><a class="dropdown-item" href="portanotebook.html">Porta Notebooks</a></li>
+                                    <li><a class="dropdown-item" href="products.html">Todos</a></li>
                             </li>
                         </ul>
                         <form class="d-flex mt-3" role="search">
                             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                            <button class="navbar-button" type="submit" place>Buscar</button>
+                            <button class="navbar-button" type="submit" >Buscar</button>
                         </form>
                     </div>
                 </div>
@@ -160,9 +161,9 @@
                                         Products
                                     </a>
                                     <ul class="product-section dropdown-menu">
-                                        <li><a class="product-item dropdown-item" href="#">Cartucheras</a></li>
-                                        <li><a class="product-item dropdown-item" href="#">Neceser</a></li>
-                                        <li><a class="product-item dropdown-item" href="#">Porta Notebooks</a></li>
+                                        <li><a class="product-item dropdown-item" href="cartucheras.html">Cartucheras</a></li>
+                                        <li><a class="product-item dropdown-item" href="neceser.html">Neceser</a></li>
+                                        <li><a class="product-item dropdown-item" href="portanotebook.html">Porta Notebooks</a></li>
                                         <li><a class="product-item dropdown-item" href="products.html">Todos</a></li>
                                 </li>
                             </ul>
