--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       <nav class="navbar fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand text-white" href="index.html"><img src="assets/img/imglogoletras.png" alt="" height="30px" width="150px"></a>
-          <a class="navbar-brand text-white" href="index.html"><img src="assets/img/imglogoletras.png" alt="" height="30px" width="150px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -25,7 +24,6 @@
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
                   <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
-                  <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" href="about.html">About us</a>
@@ -36,9 +34,10 @@
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-white" href="products.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Products</a>
                   <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Cartucheras</a></li>
-                  <li><a class="dropdown-item" href="#">Neceser</a></li>
-                  <li><a class="dropdown-item" href="#">Porta Notebooks</a></li>
+                  <li><a class="dropdown-item" href="cartucheras.html">Cartucheras</a></li>
+                  <li><a class="dropdown-item" href="neceser.html">Neceser</a></li>
+                  <li><a class="dropdown-item" href="portanotebook.html">Porta Notebooks</a></li>
+                  <li><a class="dropdown-item" href="products.html">Todos</a></li>
                 </li>
             </ul>
               <form class="d-flex mt-3" role="search">
@@ -144,9 +143,9 @@
                     Products
                     </a>
                     <ul class="product-section dropdown-menu">
-                    <li><a class="product-item dropdown-item" href="#">Cartucheras</a></li>
-                    <li><a class="product-item dropdown-item" href="#">Neceser</a></li>
-                    <li><a class="product-item dropdown-item" href="#">Porta Notebooks</a></li>
+                    <li><a class="product-item dropdown-item" href="cartucheras.html">Cartucheras</a></li>
+                    <li><a class="product-item dropdown-item" href="neceser.html">Neceser</a></li>
+                    <li><a class="product-item dropdown-item" href="portanotebook.html">Porta Notebooks</a></li>
                     <li><a class="product-item dropdown-item" href="products.html">Todos</a></li>
                 </li>
               </ul>
