se agrego el logo al contact y about

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <form class="d-flex mt-3" role="search">
                 <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                 <button class="navbar-button" type="submit" placeholder="Buscar">Buscar</button>
-                <button class="navbar-button" type="submit" placeholder="Buscar">Buscar</button>
+                <button class="navbar-button" type="submit">Buscar</button>
               </form>
             </div>
           </div>
